--- a/styles.css
+++ b/styles.css
@@ -53,15 +53,19 @@ a {
   font-size: 1.5rem;
 }
 
-.fa-search {
-  position: absolute;
-  right: 28%;
-  top: 13%;
-}
-
  .article-container {
   max-width: 1000px;
   margin: 1rem auto;
+}
+
+.no-results-container {
+margin-left: 40px;
+}
+
+.no-results {
+  font-size: 2rem;
+  font-weight: 700;
+  color: black;
 }
 
 .row {
